feat(foreign-collections-list): support indeterminate values, change colors, disable elements on click

--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -47,7 +47,9 @@ button.coin-denomination-expand {
     width: 50%;
 
     & input[type="checkbox"] {
+        display: block;
         transform: scale(1.3);
+        margin: auto;
     }
 }
 
