feat: update foreign-collections-list descriptions

--- a/src/views/pages/info/foreign-collections-list.hbs
+++ b/src/views/pages/info/foreign-collections-list.hbs
@@ -1,4 +1,4 @@
-Welcome! Here is a list of countries I have coins, stamps, and banknotes I have!
+Welcome! Here is a list of countries, territories, etc. that I have coins, banknotes, and stamps from!
 
 <div id="login-container">
     Password:
