--- a/src/views/pages/info/foreign-collections-list.hbs
+++ b/src/views/pages/info/foreign-collections-list.hbs
@@ -13,6 +13,7 @@ Welcome! Here is a list of countries, territories, etc. that I have coins, bankn
         <thead>
             <tr>
                 <th>Country</th>
+                <th>Type</th>
                 <th>Has Coin(s)</th>
                 <th>Has Banknote(s)</th>
                 <th>Has Stamp(s)</th>
