feat: store tone indicators as arrays rather than strings

--- a/src/views/pages/info/tone-indicators.hbs
+++ b/src/views/pages/info/tone-indicators.hbs
@@ -9,7 +9,7 @@ Tone indicators can be used to express tones or emotions in online messages, and
     <tbody>
         {{#each additionalData.toneIndicators}}
             <tr>
-                <td>/{{this.indicator}}</td>
+                <td>/{{this.fullIndicators}}</td>
                 <td>{{{this.meaning}}}</td>
             </tr>
         {{/each}}
