feat: tone indicators and text abbreviations updates/fixes

--- a/src/views/pages/info/text-abbreviations.hbs
+++ b/src/views/pages/info/text-abbreviations.hbs
@@ -9,7 +9,7 @@
         {{#each additionalData.textAbbreviations}}
             <tr>
                 <td>{{this.abbreviation}}</td>
-                <td>{{{this.meaning}}}</td>
+                <td>{{this.meaning}}</td>
             </tr>
         {{/each}}
     </tbody>
