--- a/src/views/pages/info/tone-indicators.hbs
+++ b/src/views/pages/info/tone-indicators.hbs
@@ -9,8 +9,8 @@ Tone indicators can be used to express tones or emotions in online messages, and
     <tbody>
         {{#each additionalData.toneIndicators}}
             <tr>
-                <td>/{{this.fullIndicators}}</td>
-                <td>{{{this.meaning}}}</td>
+                <td>{{this.fullIndicators}}</td>
+                <td>{{this.meaning}}</td>
             </tr>
         {{/each}}
     </tbody>
