--- a/src/views/pages/tools/calendar.hbs
+++ b/src/views/pages/tools/calendar.hbs
@@ -51,7 +51,7 @@
             <ul id="events-list">None!</ul>
         </div>
         <div class="todo-list">
-            To-do List:
+            To-Do List:
             <div id="todo-list">
                 <input type="text" id="login-password" />
                 <button id="login-button">Login</button>
