feat(list-sorter): add remove duplicates functionality

--- a/src/views/pages/tools/list-sorter.hbs
+++ b/src/views/pages/tools/list-sorter.hbs
@@ -9,6 +9,7 @@
     <button id="numerical-order">Sort in numerical order (filters non numbers)</button>
     <button id="randomize">Randomize</button>
     <button id="reverse">Reverse current order</button>
+    <button id="remove-duplicates">Remove duplicates</button>
     <button id="clear" class="button-danger">Clear</button>
 </section>
 <hr />
