chore: run prettier with new printWidth

--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -99,10 +99,17 @@
 }
 
 html {
-    background-image: repeating-linear-gradient(90deg, rgb(171 171 171 / 6%) 0, rgb(171 171 171 / 6%) 1px, transparent 1px, transparent 96px),
+    background-image: repeating-linear-gradient(
+            90deg,
+            rgb(171 171 171 / 6%) 0,
+            rgb(171 171 171 / 6%) 1px,
+            transparent 1px,
+            transparent 96px
+        ),
         repeating-linear-gradient(0deg, rgb(171 171 171 / 6%) 0, rgb(171 171 171 / 6%) 1px, transparent 1px, transparent 96px),
         repeating-linear-gradient(0deg, rgb(171 171 171 / 9%) 0, rgb(171 171 171 / 9%) 1px, transparent 1px, transparent 12px),
-        repeating-linear-gradient(90deg, rgb(171 171 171 / 9%) 0, rgb(171 171 171 / 9%) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, rgb(31 34 41), rgb(31 34 41));
+        repeating-linear-gradient(90deg, rgb(171 171 171 / 9%) 0, rgb(171 171 171 / 9%) 1px, transparent 1px, transparent 12px),
+        linear-gradient(90deg, rgb(31 34 41), rgb(31 34 41));
     background-color: #1f2229;
     scroll-behavior: smooth;
     scroll-padding-top: 125px;
