--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -90,8 +90,10 @@
                 <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i>
                 <div class="search-results"></div>
             </div>
-            <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span> <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
-            <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github"></i></a>
+            <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span>
+                <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
+            <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source
+                <i class="fa-brands fa-github"></i></a>
             <div id="last-commit-info">
                 <a href="https://github.com/Eejit43/eejitstools-v2{{commitInfo.url}}" target="_blank">
                     <code class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i class="fa-solid fa-code-commit"></i>{{commitInfo.sha}}</code>
