chore: run prettier

--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -79,15 +79,17 @@
             <div>
                 <a href="/">
                     <span class="logo brand-colors">
-                        <span data-value="E">E</span><span data-value="e">e</span><span data-value="j">j</span><span data-value="i">i</span><span data-value="t">t</span><span
-                            data-value="'"
-                        >'</span><span data-value="s">s</span>
+                        <span data-value="E">E</span><span data-value="e">e</span><span data-value="j">j</span><span
+                            data-value="i"
+                        >i</span><span data-value="t">t</span><span data-value="'">'</span><span data-value="s">s</span>
                         <span class="logo-tools" data-value="Tools">Tools</span>
                     </span>
                 </a>
             </div>
             <div class="search-box">
-                <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i>
+                <input class="search-text" type="text" placeholder="Search here..." /><i
+                    class="search-button fa-solid fa-magnifying-glass"
+                ></i>
                 <div class="search-results"></div>
             </div>
             <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span>
@@ -96,7 +98,9 @@
                 <i class="fa-brands fa-github"></i></a>
             <div id="last-commit-info">
                 <a href="https://github.com/Eejit43/eejitstools-v2{{commitInfo.url}}" target="_blank">
-                    <code class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i class="fa-solid fa-code-commit"></i>{{commitInfo.sha}}</code>
+                    <code class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i
+                            class="fa-solid fa-code-commit"
+                        ></i>{{commitInfo.sha}}</code>
                 </a>
             </div>
         </nav>
