--- a/src/views/pages/fun/mp3-player.hbs
+++ b/src/views/pages/fun/mp3-player.hbs
@@ -13,7 +13,10 @@
                     <div id="progress-bar"></div>
                 </div>
                 <div class="buttons">
-                    <span><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span></span>
+                    <span><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i
+                                id="shuffle-status"
+                                class="fa-solid fa-xmark"
+                            ></i></span></span>
                     <span><i class="player-icon fa-solid fa-step-backward" id="previous"></i></span>
                     <span><i class="player-icon fa-solid fa-backward" id="rewind"></i></span>
                     <span><i class="player-icon fa-solid fa-play" id="play-pause"></i></span>
