--- a/src/views/pages/tools/image-converter.hbs
+++ b/src/views/pages/tools/image-converter.hbs
@@ -28,6 +28,10 @@
         <img id="image-output" />
 
         <a id="open-converted-link" target="_blank"><button id="open-converted-result" data-icon-after="&#xf08e" disabled>Open in new tab</button></a>
-        <a id="download-converted-link" target="_blank" download><button id="download-converted-result" data-icon-after="&#xf019" disabled>Download</button></a>
+        <a id="download-converted-link" target="_blank" download><button
+                id="download-converted-result"
+                data-icon-after="&#xf019"
+                disabled
+            >Download</button></a>
     </section>
 </div>
