--- a/src/views/pages/tools/morse-code-converter.hbs
+++ b/src/views/pages/tools/morse-code-converter.hbs
@@ -1,8 +1,8 @@
 Morse Code can be represented in writing using dashes and dots (hyphens/underscores and periods,
 <code>-</code>/<code>_</code>
 and
-<code>.</code>). Characters are separated by spaces, and actual spaces are represented by a backslash (<code>/</code>), a vertical slash (<code>|</code>), or three spaces (<code>   </code>). For
-example,
+<code>.</code>). Characters are separated by spaces, and actual spaces are represented by a backslash (<code>/</code>), a vertical slash (<code
+>|</code>), or three spaces (<code>   </code>). For example,
 <code>TEST ABC</code>
 converts to
 <code>- . ... - / .- -... -.-.</code>. Morse code does
