--- a/src/views/pages/tools/regex-tester.hbs
+++ b/src/views/pages/tools/regex-tester.hbs
@@ -1,10 +1,18 @@
 <section>
     <h2>Input:</h2>
     <div id="regex-inputs">
-        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet" target="_blank" class="external-link">Regex</a>:
+        <a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet"
+            target="_blank"
+            class="external-link"
+        >Regex</a>:
         <input id="regex-input" />
 
-        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions#advanced_searching_with_flags" target="_blank" class="external-link">Flags</a>:
+        <a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions#advanced_searching_with_flags"
+            target="_blank"
+            class="external-link"
+        >Flags</a>:
         <input id="flags-input" value="g" />
     </div>
     <div>
