--- a/src/views/pages/tools/color-info.hbs
+++ b/src/views/pages/tools/color-info.hbs
@@ -58,7 +58,8 @@
         <h2>Color Information:</h2>
         <div>
             Luminance (relative, see
-            <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank" class="external-link">WCAG definition</a>):
+            <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank" class="external-link">WCAG
+                definition</a>):
             <input id="luminance-output" disabled />
             <button id="copy-luminance" class="button-copy">Copy</button>
         </div>
