--- a/src/views/pages/tools/stopwatch.hbs
+++ b/src/views/pages/tools/stopwatch.hbs
@@ -1,4 +1,6 @@
-<div class="timer-time"><span id="hours-display">00</span>:<span id="minutes-display">00</span>:<span id="seconds-display">00</span>.<span id="milliseconds-display">000</span></div>
+<div class="timer-time"><span id="hours-display">00</span>:<span id="minutes-display">00</span>:<span id="seconds-display">00</span>.<span
+        id="milliseconds-display"
+    >000</span></div>
 
 <button id="start">Start</button>
 <button id="stop">Stop</button>
