--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -46,9 +46,19 @@ button.coin-denomination-expand {
     margin: 20px auto;
     width: 50%;
 
+    & td {
+        padding: 12px 15px;
+        font-size: 16px;
+
+        @media (width <= 700px) {
+            padding: 12px;
+            font-size: 14px;
+        }
+    }
+
     & input[type="checkbox"] {
         display: block;
-        transform: scale(1.3);
+        transform: scale(1.2);
         margin: auto;
     }
 }
@@ -126,7 +136,7 @@ tr[data-upgrade="true"] {
 
 .mintage-for-all-varieties::after {
     cursor: text;
-    content: " (for all varieties)";
+    content: " (F.A.V.)";
 }
 
 .coin-type-comparison {
