feat(color-info): only add to history when color changes

--- a/src/views/pages/tools/color-info.hbs
+++ b/src/views/pages/tools/color-info.hbs
@@ -15,8 +15,8 @@
         <button id="brighten">Brighten</button>
         <button id="saturate">Saturate</button>
         <button id="desaturate">Desaturate</button>
-        <button id="increase-luminance">Increase Luminance</button>
-        <button id="decrease-luminance">Decrease Luminance</button>
+        <button id="increase-luminance">Increase luminance</button>
+        <button id="decrease-luminance">Decrease luminance</button>
     </div>
 </div>
 
