feat(fun/mp3-player): directly specify audio `src`, add track

--- a/src/views/pages/fun/mp3-player.hbs
+++ b/src/views/pages/fun/mp3-player.hbs
@@ -1,4 +1,4 @@
-<audio id="audio"><source id="source-audio" type="audio/mpeg" /></audio>
+<audio id="audio"></audio>
 
 <div id="mp3-grid" class="basic-grid">
     <div>
