feat: update font-awesome and make changes for new version

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -19,7 +19,7 @@
         <tbody>
             {{#each this}}
                 <tr>
-                    <td><a href="{{this.link}}"><i class="page-icon fa-regular fa-{{this.icon}}"></i>{{this.title}}</a></td>
+                    <td><a href="{{this.link}}"><i class="page-icon fa-regular fa-width-auto fa-{{this.icon}}"></i>{{this.title}}</a></td>
                     <td>{{{this.description}}}</td>
                 </tr>
             {{/each}}
