--- a/src/views/pages/fun/mp3-player.hbs
+++ b/src/views/pages/fun/mp3-player.hbs
@@ -13,7 +13,7 @@
                     <div id="progress-bar"></div>
                 </div>
                 <div class="buttons">
-                    <span><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i
+                    <span><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-width-auto fa-shuffle"></i><i
                                 id="shuffle-status"
                                 class="fa-solid fa-xmark"
                             ></i></span></span>
