--- a/src/public/styles/pages/info/coins-list.css
+++ b/src/public/styles/pages/info/coins-list.css
@@ -169,8 +169,69 @@ button.coin-design-expand {
     text-decoration: none;
 }
 
-/* Data exporter */
-button#export-data {
+/* Data exporter/generate needed list buttons */
+.button-row-container {
+    display: flex;
+    gap: 10px;
+}
+
+button#export-data,
+button#generate-needed-list,
+button#generate-simplified-needed-list {
     margin-top: 1em;
     padding: 5px;
+}
+
+#needed-list-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: rgb(0 0 0 / 90%);
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+#needed-list-modal-content {
+    display: block;
+    animation-duration: 0.6s;
+    animation-name: zoom;
+    margin: auto;
+    padding: 10px 0;
+    width: 80%;
+    max-width: 700px;
+    height: 150px;
+    color: var(--neutral-color-100);
+    font-family: monospace;
+    white-space: preserve;
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+#close-needed-list-modal {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    transition: 0.3s;
+    color: var(--neutral-color-100);
+    font-weight: bold;
+    font-size: 40px;
+
+    &:hover,
+    &:focus {
+        cursor: pointer;
+        color: var(--neutral-color-200);
+        text-decoration: none;
+    }
 }
