--- a/src/public/styles/pages/info/coins-info.css
+++ b/src/public/styles/pages/info/coins-info.css
@@ -50,6 +50,7 @@
         padding: 8px;
         width: 200px;
         text-align: center;
+        white-space: pre-wrap;
 
         &:hover {
             opacity: 0.8;
